--- a/agenda database/app/src/main/res/values/strings.xml
+++ b/agenda database/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="salvar_aluno">Salvar o aluno</string>
     <string name="remover">Remover</string>
     <string name="Sobrenome">Sobrenome</string>
+    <string name="telefone_fixo">Telefone fixo</string>
+    <string name="telefone_celular">Telefone celular</string>
 </resources>
